# adaXT

./: .gitignore  404.html  BUILD.md  Dockerfile  LICENSE  Makefile  Profile.prof  README.md  build-wheels.sh  cython_interface.py  data.json  data_old.json  index.html  list_modules.py  mkdocs.yml  objects.inv  overview.txt  profiler.py  pyproject.toml  requirements.txt  running_time.json  setup.py  simple_run.py  sitemap.xml  sk_test.py  test.py  test_cython.ipynb  test_cython.py  test_draw.py  time.py  time_code.py  time_decision_tree.py  time_predict.py  time_predict_tree.py  time_random_forest.py
.github/workflows/: autopep8.yml  build_wheels.yml  cython-linting.yml  github-pages.yml  publish.yml  python-package.yml  testpypi.yml
api_docs/Criteria/: index.html
api_docs/DecisionTree/: index.html
api_docs/LeafBuilder/: index.html
api_docs/Nodes/: index.html
api_docs/Parallel/: index.html
api_docs/Prediction/: index.html
api_docs/Predictor/: index.html
api_docs/RandomForest/: index.html
api_docs/Splitter/: index.html
api_docs/tree_utils/: index.html
decision_tree/: __init__.py  criteria.py  splitter.py  splitter_new.py  tree.py  tree_utils.py
docs/: index.md
imp_example/: test_decision_regression.py  test_decision_regression_william.py  test_decision_tree_classifier.py  test_split_william.py
manuscript/: .gitignore  paper.tex
search/: search_index.json
src/: criteria.py  decision_tree.pyx  splitter.py  tree.py
tests/: running_time.json  test_criteria.py  test_decision_tree.py  test_random_forest.py  test_split.py  test_tree_features.py
(+145 files in other folders)
