[build-system]
requires = ["setuptools", "Cython", "numpy", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaXT"
version = "0.0.1"
description = "temp"
requires-python = ">=3.10"

dependencies = [
  "scipy",
  "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]