[build-system]
requires = ["setuptools", "Cython", "numpy", "wheel"]
build-backend = 'setuptools.build_meta'

[tool.cython-lint]
max-line-length = 127

[tool.flake8]
max-line-length = 127
per-file-ignores = ['__init__.py:F401']

[tool.cibuildwheel]
test-requires = ["pytest", "scipy"]
test-command = "pytest tests"
skip = ["cp3{6,7,8,9}", 'pp*']
