[project]
license = "BSD-3-Clause"
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools", "Cython", "numpy", "wheel"]

[tool.cython-lint]
max-line-length = 127

[tool.flake8]
max-line-length = 127
per-file-ignores = ['__init__.py:F401']

[tool.cibuildwheel]
skip = ["cp3{6,7,8,9}-*", 'pp*']
